--- a/index.html
+++ b/index.html
@@ -4,10 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Tasty Food</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Uchen&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h2><span class="orange">Taste</span> our delicious food!</h2>
+   <section>
+       <div class="half-width">
+        <h2><span class="orange">Taste</span> our delicious food!</h2>
+        <p>The healthy and most delicious food is in your town. Try once and you will never forget.</p>
+        <a class="button" target="_blank" href="">Order Food</a>
+       </div>
+       <div class="half-width">
+           <img src="images/fastfood/food1.png" alt="food_image1">
+       </div>
+   </section>
+   <section class="background-image">
+    <div class="half-width">
+        <img src="images/fastfood/food1.png" alt="food_image1">
+    </div>
+    <div class="half-width">
+        <h2>About Us</h2>
+        <p>We provide home delivery. So you can enjoy our food with your family and dear ones at home. </p>
+        <a class="button" target="_blank" href="">Contact Us</a>
+       </div>
+   </section>
+   <section>
+       <div class="our-food">
+        <h2>Our Food</h2>
+        <p>We provide healthy and delicious food.<br>So forget about diet and enjoy our food with friends and family.</p>
+       </div>
+   </section>
+   <section class="top-rated-items">
+       <div class="item">
+        <img class="image-size" src="images/fastfood/pizza.jpg" alt="pizza-image">
+           <h2>Pizza</h2>
+           <p>Pizza is one of the top rated item of our restaurent.You can enjoy various flavours in reasonable price at our palce.</p>
+           
+       </div>
+       <div class="item">
+        <img src="images/fastfood/burger.jpg" alt="burger-image">
+        <h2>Burger</h2>
+        <p>Pizza is one of the top rated item of our restaurent.You can enjoy various flavours in reasonable price at our palce.</p>
+        
+    </div>
+    <div class="item">
+        <img src="images/fastfood/pasta.jpg" alt="pasta-image">
+        <h2>Pasta</h2>
+        <p>Pizza is one of the top rated item of our restaurent.You can enjoy various flavours in reasonable price at our palce.
+        </p>
+    </div>
+   </section>
+   <footer>
+       <h2><span class="orange">Tasty</span> Food</h2>
+       <p>Eat healthy to live healthy.</p>
+   </footer>
 </body>
 </html>
