--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Uchen&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap" rel="stylesheet">
 </head>
 <body>
-   <section>
+
+   <section class="background-image1">
        <div class="half-width">
-        <h2><span class="orange">Taste</span> our delicious food!</h2>
+        <h1><span class="orange">Taste</span> our delicious food!</h1>
         <p>The healthy and most delicious food is in your town. Try once and you will never forget.</p>
         <a class="button" target="_blank" href="">Order Food</a>
        </div>
@@ -21,9 +22,9 @@
            <img src="images/fastfood/food1.png" alt="food_image1">
        </div>
    </section>
-   <section class="background-image">
+   <section class="background-image2">
     <div class="half-width">
-        <img src="images/fastfood/food1.png" alt="food_image1">
+        <img src="images/fastfood/food2.png" alt="food_image2">
     </div>
     <div class="half-width">
         <h2>About Us</h2>
@@ -34,32 +35,31 @@
    <section>
        <div class="our-food">
         <h2>Our Food</h2>
-        <p>We provide healthy and delicious food.<br>So forget about diet and enjoy our food with friends and family.</p>
+        <p>We provide healthy and delicious food.<br>So forget about diet and enjoy our food with your friends and family.</p>
        </div>
    </section>
    <section class="top-rated-items">
        <div class="item">
         <img class="image-size" src="images/fastfood/pizza.jpg" alt="pizza-image">
            <h2>Pizza</h2>
-           <p>Pizza is one of the top rated item of our restaurent.You can enjoy various flavours in reasonable price at our palce.</p>
+           <p>Pizza is one of the top rated item of our restaurent.You can enjoy various flavours in reasonable price at our place.</p>
            
        </div>
        <div class="item">
         <img src="images/fastfood/burger.jpg" alt="burger-image">
         <h2>Burger</h2>
-        <p>Pizza is one of the top rated item of our restaurent.You can enjoy various flavours in reasonable price at our palce.</p>
-        
+        <p>Burger of our restaurent is quite famous. You can customize the spice level and can have many catagories in our burgers.</p>
     </div>
     <div class="item">
         <img src="images/fastfood/pasta.jpg" alt="pasta-image">
         <h2>Pasta</h2>
-        <p>Pizza is one of the top rated item of our restaurent.You can enjoy various flavours in reasonable price at our palce.
+        <p>Pasta lovers will definitly love our pasta.It's full of chicken,cheese,mashroom,different kinds of sauce,capcicum etc.You can have our pastas into a very affordable price.
         </p>
     </div>
    </section>
    <footer>
        <h2><span class="orange">Tasty</span> Food</h2>
-       <p>Eat healthy to live healthy.</p>
+       <p>Health requires good food. Good food is good mood.</p>
    </footer>
 </body>
 </html>
