--- a/index.html
+++ b/index.html
@@ -5,18 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tasty Food</title>
+<link rel="shortcut icon" href="images/fastfood/icon.png " type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="menu-bar">
+        <ul>
+            <li><a target="_blank" href="https://www.pizzahutbd.com/">HOME</a></li>
+            <li><a target="_blank" href="https://www.pizzahutbd.com/">ABOUT</a></li>
+            <li><a target="_blank" href="https://www.pizzahutbd.com/">MENU</a></li>
+            <li><a target="_blank" href="https://www.pizzahutbd.com/">OFFER</a></li>
+            <li><a target="_blank" href="https://www.pizzahutbd.com/">CONTACT US</a></li>
+            
+        </ul>
+
+    </div>
 
    <section class="background-image1">
        <div class="half-width">
         <h1><span class="orange">Taste</span> our delicious food!</h1>
         <p>The healthy and most delicious food is in your town. Try once and you will never forget.</p>
-        <a class="button" target="_blank" href="">Order Food</a>
+        <a class="button" target="_blank" href="https://www.pizzahutbd.com/">Order Food</a>
        </div>
        <div class="half-width">
            <img src="images/fastfood/food1.png" alt="food_image1">
@@ -29,7 +41,7 @@
     <div class="half-width">
         <h2>About Us</h2>
         <p>We provide home delivery. So you can enjoy our food with your family and dear ones at home. </p>
-        <a class="button" target="_blank" href="">Contact Us</a>
+        <a class="button" target="_blank" href="https://www.pizzahutbd.com/">Contact Us</a>
        </div>
    </section>
    <section>
@@ -56,6 +68,16 @@
         <p>Pasta lovers will definitly love our pasta.It's full of chicken,cheese,mashroom,different kinds of sauce,capcicum etc.You can have our pastas into a very affordable price.
         </p>
     </div>
+   </section>
+   <section>
+       <div class="social-media-review">
+           <h2>700K</h2>
+           <p>Youtube Subscriber</p>
+           <h2>2.4m</h2>
+           <p>Instagram Followers</p>
+           <h2>100k</h2>
+           <p>Dribbble Shot Likes</p>
+       </div>
    </section>
    <footer>
        <h2><span class="orange">Tasty</span> Food</h2>
