--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
             <li><a target="_blank" href="https://www.pizzahutbd.com/">MENU</a></li>
             <li><a target="_blank" href="https://www.pizzahutbd.com/">OFFER</a></li>
             <li><a target="_blank" href="https://www.pizzahutbd.com/">CONTACT US</a></li>
-            
         </ul>
-
     </div>
 
    <section class="background-image1">
@@ -41,7 +39,7 @@
     <div class="half-width">
         <h2>About Us</h2>
         <p>We provide home delivery. So you can enjoy our food with your family and dear ones at home. </p>
-        <a class="button" target="_blank" href="https://www.pizzahutbd.com/">Contact Us</a>
+        <a class="button" target="_blank" href="https://kfcbd.com/">Contact Us</a>
        </div>
    </section>
    <section>
