--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="menu-bar">
         <ul>
             <li><a target="_blank" href="https://www.pizzahutbd.com/">HOME</a></li>
-            <li><a target="_blank" href="https://www.pizzahutbd.com/">ABOUT</a></li>
+            <li><a target="_blank" href="https://kfcbd.com">ABOUT</a></li>
             <li><a target="_blank" href="https://www.pizzahutbd.com/">MENU</a></li>
-            <li><a target="_blank" href="https://www.pizzahutbd.com/">OFFER</a></li>
+            <li><a target="_blank" href="https://kfcbd.com/">OFFER</a></li>
             <li><a target="_blank" href="https://www.pizzahutbd.com/">CONTACT US</a></li>
         </ul>
     </div>
@@ -38,7 +38,7 @@
     </div>
     <div class="half-width">
         <h2>About Us</h2>
-        <p>We provide home delivery. So you can enjoy our food with your family and dear ones at home. </p>
+        <p>Come with friends and enjoy our delicious items. Also We provide home delivery. So you can enjoy our food with your family and dear ones at home too! </p>
         <a class="button" target="_blank" href="https://kfcbd.com/">Contact Us</a>
        </div>
    </section>
@@ -67,15 +67,19 @@
         </p>
     </div>
    </section>
-   <section>
+   <section class="social-media">
        <div class="social-media-review">
-           <h2>700k</h2>
-           <p>Youtube Subscriber</p>
-           <h2>2.4m</h2>
-           <p>Instagram Followers</p>
-           <h2>100k</h2>
-           <p>Dribbble Shot Likes</p>
+        <h1>700k</h1>
+        <p>Youtube Subscriber</p>
        </div>
+       <div class="social-media-review">
+           <h1>2.4m</h1>
+           <p>Instagram Followers</p>
+        </div>
+        <div class="social-media-review">
+           <h1>100k</h1>
+            <p>Dribbble Shot Likes</p>
+        </div>      
    </section>
    <footer>
        <h2><span class="orange">Tasty</span> Food</h2>
